Change class from Bedrockdoors to BedrockDoors

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ archives_base_name=bedrockdoors
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.25.1+build.416-1.16
+polymer_version=0.1.0-rc.4+1.17.1
